@@ -20,7 +20,7 @@ import ch.arrg.logreader.core.LogReaderApp;
 import ch.arrg.logreader.core.Resources;
 
 // TODO FEAT highlight occurences
-// TODO FEAT collapsible exceptions
+// TODO FEAT [GH-3] collapsible exceptions
 // TODO FEAT load and restore session
 
 // TODO BUG 2 with -n, old lines are removed only on refilter()
